# main_error

./: .travis.yml  Cargo.toml  README  README.md
.github/workflows/: CI.yml
examples/: 01_string_error.rs  02_custom_error.rs  03_multiple_error_types.rs
src/: lib.rs
